# stock_pred

./: Cargo.toml  README  vars.env
backtest/: Cargo.toml
backtest/src/: backtest 040725.rs  backtest.rs
logs/: stock_pred.log.2025-04-04  stock_pred.log.2025-04-07  stock_pred.log.2025-04-21  stock_pred.log.2025-04-22  stock_pred.log.2025-04-30  stock_pred.log.2025-05-07
logs/trades/: 2025-05-07.csv
neg_pred/: Cargo.toml
neg_pred/src/: neg_pred.rs  neg_pred_gen.rs
pred/src/: pred.rs  pred_gen.rs  pred_testing.rs
reporting/: Cargo.toml
reporting/src/: reporting.rs
src/: config.rs  lib.rs  logging.rs  main.rs  types.rs
src/api/: binance.rs
src/trading/: discovery.rs  execution.rs  growth_tracker.rs  indicators.rs  mod.rs
