[package]
name = "stock_pred"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "pred"
path = "pred/src/pred.rs"

[[bin]]
name = "pred_generic"
path = "pred/src/pred_gen.rs"

[[bin]]
name = "pred_test"
path = "pred/src/pred_testing.rs"

[[bin]]
name = "neg_pred"
path = "neg_pred/src/neg_pred.rs"

[[bin]]
name = "neg_pred_generic"
path = "neg_pred/src/neg_pred_gen.rs"

[[bin]]
name = "backtest"
path = "backtest/src/backtest.rs"

[lib]
path = "src/lib.rs"

[workspace]
members = ["pred", "backtest"]


[dependencies]
tokio = { version = "1", features = ["full"] }   # Async runtime
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] } # HTTP requests
serde = { version = "1", features = ["derive"] } # JSON serialization
serde_json = "1" # JSON parsing
url = "2" # URL parsing
tokio-stream = "0.1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenv = "0.15"
chrono = "0.4"
once_cell = "1.21.3"  
notify = "5.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.2"
log = "0.4"
env_logger = "0.10" 