[package]
name = "backtest"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }   # Async runtime
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] } # HTTP requests
serde = { version = "1", features = ["derive"] } # JSON serialization
serde_json = "1" # JSON parsing
url = "2" # URL parsing
tokio-stream = "0.1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenv = "0.15"
chrono = "0.4"
once_cell = "1.21.3"  